--- a/locales/ru/translation.json
+++ b/locales/ru/translation.json
@@ -1,6 +1,7 @@
 {
-    "key": "зкшмуе!",
-	 "hello": "ьтиьи!",
-	 "time": "прло!",
-	 "username": "фыва!"
+    "key": "hello!",
+    "access_denied": "Access denied.",
+    "access_denied_no_token": "Access denied. No token provided.",
+    "invalid_token": "Invalid token",
+    "internal_server_error": "Something failed terribly."
 }
