-error_handling.js removed from startup (the functionality has been moved to util/error_handler.js) -Added some more example routes in helloworld.js -JOI validation example

--- a/locales/ru/translation.json
+++ b/locales/ru/translation.json
@@ -1,5 +1,5 @@
 {
-    "key": "hello!",
+    "key": "зкшмуе!",
     "access_denied": "Access denied.",
     "access_denied_no_token": "Access denied. No token provided.",
     "invalid_token": "Invalid token",
