--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -7,7 +7,8 @@
     "error_internal_server_error": "Something failed terribly.",
     "error_user_exists": "The username or email has already been taken.",
     "error_invalid_username_or_password": "Invalid username or password",
-    "error_user_does_not_exist": "Invalid username or password",
+    "error_user_does_not_exist": "User does not exist",
     "error_multiple_users_found": "Something failed terribly.",
-    "error_too_many_rows_inserted": "Something failed terribly."
+    "error_too_many_rows_inserted": "Something failed terribly.",
+    "error_too_many_rows_updated": "Something failed terribly."
 }
