--- a/locales/ru/translation.json
+++ b/locales/ru/translation.json
@@ -10,5 +10,7 @@
     "error_user_does_not_exist": "User does not exist",
     "error_multiple_users_found": "Something failed terribly.",
     "error_too_many_rows_inserted": "Something failed terribly.",
-    "error_too_many_rows_updated": "Something failed terribly."
+    "error_too_many_rows_updated": "Something failed terribly.",
+    "error_too_many_rows_deleted": "Something failed terribly.",
+    "error_deleted_user": "Something failed terribly."
 }
