--- a/locales/ru/translation.json
+++ b/locales/ru/translation.json
@@ -12,5 +12,5 @@
     "error_too_many_rows_inserted": "Something failed terribly.",
     "error_too_many_rows_updated": "Something failed terribly.",
     "error_too_many_rows_deleted": "Something failed terribly.",
-    "error_deleted_user": "Something failed terribly."
+    "error_modified_user": "Something failed terribly."
 }
