-Added end points for fetching multiple users at the same time -A lot of fine-tuning for user end points and tests

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -12,5 +12,6 @@
     "error_too_many_rows_inserted": "Something failed terribly.",
     "error_too_many_rows_updated": "Something failed terribly.",
     "error_too_many_rows_deleted": "Something failed terribly.",
-    "error_modified_user": "Something failed terribly."
+    "error_modified_user": "Something failed terribly.",
+    "error_cant_modify_superadmins": "Superadmins are untouchable!"
 }
